# Cardinal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONSIDERATIONS.md  Changelog.md  Doxyfile  LICENSE  README.md  TODO.md  build.zig  cardinal.project  cardinal_config.json  compile-shaders.ps1  compile_commands.json  fetch_deps.ps1  format-code.ps1  imgui.ini  log.txt  run-clang-tidy.ps1
assets/: readme.txt
assets/materials/: pbr_layout.json
assets/pipelines/: debug_grid.json  debug_uv.json  debug_wireframe.json  (+7 more)
client/: CMakeLists.txt
client/src/: main.c  main.zig
editor/: CMakeLists.txt
editor/include/: editor_layer.h  imgui_bridge.h
editor/src/: app.zig  c.zig  editor_layer.c  editor_layer.cpp  editor_layer.zig  editor_state.zig  imgui_bridge.cpp  main.c  main.zig  project.zig  undo.zig
editor/src/panels/: animation_panel.zig  content_browser.zig  hierarchy_panel.zig  inspector.zig  memory_stats.zig  performance_panel.zig  project_manager.zig  scene_hierarchy.zig  scene_manager_panel.zig  terrain_panel.zig
editor/src/systems/: camera_controller.zig  debug_draw.zig  editor_scene_sync.zig  gizmo_system.zig  hierarchy_system.zig  input.zig  mesh_generators.zig  scene_async_loading.zig  scene_import_export.zig  scene_io.zig  selection_raycast.zig  selection_system.zig  terrain_volume.zig  volumetric_terrain.zig
editor/src/systems/volumetric_terrain/: bricks.zig  common.zig  data.zig  dirty.zig  editing.zig  gpu.zig  meshing.zig  streaming.zig  tasks.zig
engine/: CMakeLists.txt  test_vulkan_types.h
engine/examples/: mesh_shader_bindless_example.c  mesh_shader_bindless_example.zig
engine/include/: cardinal_engine.h
engine/include/cardinal/: cardinal.h
engine/include/cardinal/assets/: gltf_loader.h  loader.h  material_loader.h  material_ref_counting.h  mesh_loader.h  model_manager.h  scene.h  texture_loader.h
engine/include/cardinal/core/: animation.h  async_loader.h  log.h  memory.h  ref_counting.h  resource_state.h  transform.h  window.h
engine/include/cardinal/renderer/: renderer.h  renderer_internal.h  vulkan_barrier_validation.h  vulkan_commands.h  vulkan_compute.h  vulkan_descriptor_indexing.h  vulkan_instance.h  vulkan_mesh_shader.h  vulkan_mt.h  vulkan_pbr.h  vulkan_pipeline.h  vulkan_swapchain.h  vulkan_sync_manager.h  vulkan_texture_manager.h  vulkan_timeline_debug.h  vulkan_timeline_pool.h  vulkan_utils.h
engine/include/cardinal/renderer/util/: vulkan_buffer_utils.h  vulkan_descriptor_buffer_utils.h  vulkan_descriptor_buffer_utils_minimal.h  vulkan_descriptor_utils.h  vulkan_material_utils.h  vulkan_shader_utils.h  vulkan_texture_utils.h
engine/src/: root.zig  tests.zig
engine/src/assets/: animation.zig  animation_controller.zig  animation_sampling.zig  asset_database.zig  asset_manager.zig  asset_utils.zig  dds_loader.zig  file_io.zig  gltf_loader.c  gltf_loader.zig  kfm_loader.zig  loader.c  loader.zig  material_loader.c  material_loader.zig  material_ref_counting.c  material_ref_counting.zig  mesh_loader.c  mesh_loader.zig  model_manager.c  model_manager.zig  nif_loader.zig  nif_paths.zig  nif_schema.zig  scene.c  scene.zig  scene_serializer.zig  scene_serializer_json.zig  stb_impl.c  texture_decode_exr.zig  texture_decode_stb.zig  texture_loader.c  texture_loader.zig  texture_types.zig
engine/src/assets/scene_serializer_components/: camera.zig  editor_globals.zig  hierarchy.zig  light.zig  mesh_renderer.zig  name.zig  node.zig  script.zig  skybox.zig  terrain.zig  transform.zig  volumetric_terrain.zig
engine/src/core/: animation.c  animation.zig  animation_controller.zig  async_loader.c  async_loader.zig  async_loader_types.zig  config.zig  engine.zig  errors.zig  events.zig  handle_manager.zig  handles.zig  input.zig  job_system.zig  log.c  log.cpp  log.zig  log_adapter.c  math.zig  memory.c  memory.zig  module.zig  name_hash.zig  platform.zig  pool_allocator.zig  ref_counting.c  ref_counting.zig  resource_state.c  resource_state.zig  stack_allocator.zig  test_arraylist.zig  tracy.zig  transform.c  transform.zig  vfs.zig  window.c  window.zig
engine/src/ecs/: archetype.zig  command_buffer.zig  component.zig  components.zig  entity.zig  node_factory.zig  registry.zig  scheduler.zig  system.zig  systems.zig
engine/src/platform/: linux.zig  macos.zig  windows.zig
engine/src/renderer/: render_graph.zig  vma_implementation.cpp  vulkan_allocator.c  vulkan_allocator.zig  vulkan_barrier_validation.c  vulkan_barrier_validation.zig  vulkan_buffer_manager.c  vulkan_buffer_manager.h  vulkan_buffer_manager.zig  vulkan_c.zig  vulkan_commands.c  vulkan_commands.h  vulkan_commands.zig  vulkan_commands_struct.h  vulkan_compute.c  vulkan_compute.zig  vulkan_context_struct.h  vulkan_descriptor_indexing.c  vulkan_descriptor_indexing.zig  vulkan_descriptor_manager.c  vulkan_descriptor_manager.h  vulkan_descriptor_manager.zig  vulkan_device_loss_recovery.zig  vulkan_format_constants.zig  vulkan_instance.c  vulkan_instance.h  vulkan_instance.zig  vulkan_maintenance8_sync.c  vulkan_maintenance8_sync.zig  vulkan_material_system.zig  vulkan_mesh_shader.c  vulkan_mesh_shader.zig  vulkan_mt.c  vulkan_mt.h  vulkan_mt.zig  vulkan_pbr.c  vulkan_pbr.zig  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_pipeline.zig  (+53 more)
engine/src/renderer/util/: spirv_parser.zig  vulkan_buffer_utils.c  vulkan_buffer_utils.zig  vulkan_descriptor_buffer_utils.c  vulkan_descriptor_buffer_utils.zig  vulkan_descriptor_init.zig  vulkan_descriptor_utils.c  vulkan_descriptor_utils.zig  vulkan_material_utils.c  vulkan_material_utils.zig  vulkan_pbr_init.zig  vulkan_pipeline_cache_io.zig  vulkan_pipeline_json.zig  vulkan_shader_module_cache.zig  vulkan_shader_reflection.zig  vulkan_shader_utils.c  vulkan_shader_utils.zig  vulkan_shadow_cascades.zig  vulkan_swapchain_policy.zig  vulkan_swapchain_util.zig  vulkan_texture_utils.c  vulkan_texture_utils.zig  vulkan_timeline_mutex.zig
engine/src/rhi/: rhi.zig  rhi_types.zig
engine/src/rhi/vulkan/: backend.zig
scripts/: compile-shaders.ps1  fetch_deps.ps1  format-code.ps1
temp_init/: build.zig  build.zig.zon
(+42 files in other folders)
